--- a/app/src/main/res/layout/menu_basket.xml
+++ b/app/src/main/res/layout/menu_basket.xml
@@ -9,7 +9,8 @@
     <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="#FF9800"
+        android:background="#00FF9800"
+        android:backgroundTint="@color/orange"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -28,7 +29,7 @@
         android:text="8"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="@color/black"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
